src/test/ui/issue-41652/issue_41652.stderr
error[E0599]: no method named `f` found for type `{integer}` in the current scope
  --> $DIR/issue_41652.rs:19:11
   |
19 |         3.f()
   |           ^
   |
   = note: found the following associated functions; to be used as methods, functions must have a `self` parameter
   = help: try with `{integer}::f`
note: candidate #1 is defined in the trait `issue_41652_b::Tr`
  --> $DIR/auxiliary/issue_41652_b.rs:14:5
   |
14 | /     fn f()
15 | |         where Self: Sized;
   | |__________________________^
   = help: to disambiguate the method call, write `issue_41652_b::Tr::f(3)` instead

error: aborting due to previous error

